--- a/templates/base.html
+++ b/templates/base.html
@@ -48,10 +48,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     
-    <!-- Custom CSS -->
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    
+    <!-- Page-specific CSS will be loaded here -->
     {% block extra_css %}{% endblock %}
 </head>
 <body>
