--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,10 @@
     
     <!-- Leaflet MarkerCluster JS -->
     <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
-    
+
+    <!-- Utilities JS (Sistema unificado de modales, toasts y validación) -->
+    <script src="{% static 'js/utils.js' %}"></script>
+
     <!-- Custom JS -->
     <script src="{% static 'js/main.js' %}"></script>
     
