--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,9 @@
 
     <!-- Custom JS -->
     <script src="{% static 'js/main.js' %}"></script>
+
+    <!-- Debug JS (solo para desarrollo - eliminar en producción) -->
+    <script src="{% static 'js/debug.js' %}"></script>
     
     <!-- Service Worker Registration -->
     <script>
